<resources>
    <string name="app_name">Pogodynka</string>
    <string name="search_edit_text">Wyszukaj miasto</string>
    <string name="search_button">SZUKAJ</string>
    <string name="temperature">Temperatura</string>
    <string name="pressure">Ciśnienie</string>
    <string name="sunrise">Wschód słońca</string>
    <string name="sunset">Zachód słońca</string>
    <string name="time">Data pobrania</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>